--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,11 +22,11 @@ jobs:
 
       - name: Build Docker image
         run: |
-          docker build -t cyprienderuelle/my-app:latest .
+          docker build -t cyprienderuelle/cd:latest .
 
       - name: Push Docker image to Docker Hub
         run: |
-          docker push cyprienderuelle/my-app:latest
+          docker push cyprienderuelle/cd:latest
 
   deploy:
     runs-on: ubuntu-latest
@@ -41,7 +41,7 @@ jobs:
           password: ${{ secrets.VM_PASSWORD }}
           port: 8022
           script: |
-            docker pull cyprienderuelle/my-app:latest
-            docker stop my-app || true
-            docker rm my-app || true
-            docker run -d --name my-app -p 80:80 cyprienderuelle/my-app:latest
+            docker pull cyprienderuelle/cd:latest
+            docker stop cd || true
+            docker rm cd || true
+            docker run -d --name cd -p 80:80 cyprienderuelle/cd:latest
